--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 
 p{
 display: block;
-margin: auto;
+margin-bottom: 2rem;
 text-align: center;
 font-size:2rem ;
 color: #f97316;
@@ -38,7 +38,7 @@ color: #f97316;
 }
 
 
-.submit-btn{
+.submit-btn-login{
     display: block;
     margin: auto;
     border-radius: 2px;
@@ -46,7 +46,7 @@ color: #f97316;
     border: none;
     cursor: pointer;
     display: block;
-    width: 300px;
+    width: 200px;
     height: 40px;
     text-align: center;
     line-height: 40px;
