--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
 }
 
 
+
 .product{
     position: relative;
     overflow: hidden;
     padding: 20px 0;
+    margin-left:250px;
 }
 
 .product-category{
@@ -20,22 +22,213 @@
     text-transform: capitalize;
 }
 
-/* .badge {
-    border-radius: 0.5rem;
-    border: 2px solid black;
-    margin: 0.5rem;
-    padding: 1rem;
+.ecom-sidenav {
+    height:fit-content;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    /* background-color: rgb(255, 251, 251); */
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+
+  
+
+  .sidenav-header{
+      padding: 6px 8px 6px 16px;
+  }
+  
+  .py-3{
+    padding:6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 13px;
+    color: #000000;
+    display: block;
+  }
+
+  .navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9;
+}
+
+.nav{
+    padding: 2px 2vw;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+}
+
+.nav-items{
+    display: flex;
     align-items: center;
-  } */
+}
 
-.B{
+.brand-logo{
+    height:23rem;
+    width:23rem;
+}
 
-    text-align: center;
-    background-color: orange;
-    border-radius: 50%;
-    font-size: 1rem;
-    width: fit-content; 
-    
+.search{
+    width: 600px;
+    display: flex;
+}
+
+.search-box{
+    width: 80%;
+    height: 40px;
+    /* padding: 10px; */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: 1px solid var(--border-color);
+    text-transform: capitalize;
+    background: none;
+    color: #bebebe;
+    outline: none;
+}
+
+
+.search-btn{
+    width: 20%;
+    height: 40px;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #383838;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 15px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+
+.nav-items a{
+    margin-left: 20px;
+}
+
+.nav-items a i{
+    width: 30px;
+}
+
+.links-container{
+    width: 100%;
+    display: flex;
+    padding: 10px 10vw;
+    justify-content: center;
+    list-style: none;
+    border-top: 1px solid var(--border-color);
+}
+
+.link{
+    text-transform: capitalize;
+    padding: 0 10px;
+    margin: 0 5px;
+    text-decoration: none;
+    color: #383838;
+    opacity: 0.5;
+    transition: .5s;
+}
+
+
+.product-container{
+    padding: 0 10vw;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+
+.product-container::-webkit-scrollbar{
+    display: none;
+}
+
+.product-card{
+    flex: 0 0 auto;
+    width: 250px;
+    height: 450px;
+    margin-right: 40px;
+}
+
+.product-image{
+    position: relative;
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+}
+
+.product-thumb{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.discount-tag{
+    position: absolute;
+    background: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    color: #ff7d7d;
+    right: 10px;
+    top: 10px;
+    text-transform: capitalize;
+}
+
+.card-btn{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    width: 90%;
+    text-transform: capitalize;
+    border: none;
+    outline: none;
+    background: #fff;
+    border-radius: 5px;
+    transition: 0.5s;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.product-card:hover .card-btn{
+    opacity: 1;
+}
+
+.card-btn:hover{
+    background: #efefef;
+}
+
+.product-info{
+    width: 100%;
+    height: 100px;
+    padding-top: 10px;
+}
+
+.product-brand{
+    text-transform: uppercase;
+}
+
+.product-short-des{
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    overflow: hidden;
+    opacity: 0.5;
+    text-transform: capitalize;
+    margin: 5px 0;
+}
+
+.price{
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.actual-price{
+    margin-left: 20px;
+    opacity: 0.5;
+    text-decoration: line-through;
 }
