--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
     transition: .5s;
 }
 
-
+/* 
 .product-container{
     padding: 0 10vw;
     display: flex;
@@ -231,4 +231,4 @@
     margin-left: 20px;
     opacity: 0.5;
     text-decoration: line-through;
-}
+} */
