--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@
     border-bottom-right-radius: 10px;
 }
 
+.rating1
+{
+    color: black;
+}
+
 
 .nav-items a{
     margin-left: 20px;
@@ -136,7 +141,7 @@
 
 
 .product-container{
-    padding: 10vw 10vw;
+    padding: 5vw 10vw;
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
