--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root{
     --border-color:#d1d1d1;
-    
+    --table-element-color:#fb923c;
+    --primary-color: #94a3b8;
     }
 
-/*cart-page*/
+/*wishlist-page*/
 
 
 .navbar{
@@ -25,7 +26,8 @@
     align-items: center;
 }
 
-.brand-logo-cart{
+.brand-logo-wishlist{
+    margin-left: 30rem;
     height:23rem;
     width:23rem;
 }
@@ -56,8 +58,13 @@
     transition: .5s;
 }
 
+.cartpage-title{
+font-size: 20px;
+color: var(--primary-color);
 
-.cart-page{
+}
+
+.wishlist-page{
     margin: 80px 20px;
 }
 
@@ -78,7 +85,7 @@ th{
     text-align: left;
     padding: 5px;
     color:#fff;
-    background: #fb923c;
+    background: var(--table-element-color);
     font-weight: normal;   
 }
 
@@ -98,7 +105,7 @@ td input{
 }
 
 td a{
-    color:#fb923c;
+    color:var(--table-element-color);
     font-size: 12px;
 }
 
@@ -114,7 +121,7 @@ margin-right: 10px;
 }
 
 .total-price table{
-    border-top: 3px solid #fb923c;
+    border-top: 3px solid var(--table-element-color);
     width: 100%;
     max-width:  400px;
 }
@@ -125,4 +132,14 @@ td:last-child{
 
 th:last-child{
     text-align: right;
+}
+
+
+.cart-btn{
+    color: white;
+    border-radius: 1rem;
+    border:none;
+    font-size: 12px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    background: var(--table-element-color);
 }
