--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 :root{
     --border-color:#d1d1d1;
-    --table-element-color:#fb923c;
-    --primary-color: #94a3b8;
+    
     }
 
-/*wishlist-page*/
+/*cart-page*/
 
 
 .navbar{
@@ -26,8 +25,7 @@
     align-items: center;
 }
 
-.brand-logo-wishlist{
-    margin-left: 30rem;
+.brand-logo-cart{
     height:23rem;
     width:23rem;
 }
@@ -58,13 +56,8 @@
     transition: .5s;
 }
 
-.cartpage-title{
-font-size: 20px;
-color: var(--primary-color);
 
-}
-
-.wishlist-page{
+.cart-page{
     margin: 80px 20px;
 }
 
@@ -85,7 +78,7 @@ th{
     text-align: left;
     padding: 5px;
     color:#fff;
-    background: var(--table-element-color);
+    background: #fb923c;
     font-weight: normal;   
 }
 
@@ -105,7 +98,7 @@ td input{
 }
 
 td a{
-    color:var(--table-element-color);
+    color:#fb923c;
     font-size: 12px;
 }
 
@@ -121,7 +114,7 @@ margin-right: 10px;
 }
 
 .total-price table{
-    border-top: 3px solid var(--table-element-color);
+    border-top: 3px solid #fb923c;
     width: 100%;
     max-width:  400px;
 }
@@ -132,14 +125,4 @@ td:last-child{
 
 th:last-child{
     text-align: right;
-}
-
-
-.cart-btn{
-    color: white;
-    border-radius: 1rem;
-    border:none;
-    font-size: 12px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    background: var(--table-element-color);
 }
