Code updated as per pr reveiew changes

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
     z-index: 1;
     top: 0;
     left: 0;
-    /* background-color: rgb(255, 251, 251); */
     overflow-x: hidden;
     padding-top: 20px;
   }
@@ -49,11 +48,11 @@
   }
 
   .navbar{
-    position: sticky;
+    
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 9;
+   
 }
 
 .nav{
@@ -75,17 +74,18 @@
 .search{
     width: 600px;
     display: flex;
+    margin-left: 20rem;
 }
 
 .search-box{
+    
     width: 80%;
     height: 40px;
-    /* padding: 10px; */
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: 1px solid var(--border-color);
     text-transform: capitalize;
-    background: none;
+    background: #f1f5f9;
     color: #bebebe;
     outline: none;
 }
@@ -106,8 +106,9 @@
     border-bottom-right-radius: 10px;
 }
 
+
 .rating1
-{
+{   font-size: 0.9rem;
     color: black;
 }
 
@@ -145,8 +146,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    /* overflow-x: auto; */
-    /* scroll-behavior: smooth; */
+    
 }
 
 .product-container::-webkit-scrollbar{
@@ -199,7 +199,7 @@
     border-radius: 5px;
     transition: 0.5s;
     cursor: pointer;
-    /* opacity: 0; */
+    
 }
 
 .product-card:hover .card-btn{
@@ -241,101 +241,3 @@
     text-decoration: line-through;
 }
 
-/* 
-.product-container{
-    padding: 0 10vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-}
-
-.product-container::-webkit-scrollbar{
-    display: none;
-}
-
-.product-card{
-    flex: 0 0 auto;
-    width: 250px;
-    height: 450px;
-    margin-right: 40px;
-}
-
-.product-image{
-    position: relative;
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
-}
-
-.product-thumb{
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-}
-
-.discount-tag{
-    position: absolute;
-    background: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    color: #ff7d7d;
-    right: 10px;
-    top: 10px;
-    text-transform: capitalize;
-}
-
-.card-btn{
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    width: 90%;
-    text-transform: capitalize;
-    border: none;
-    outline: none;
-    background: #fff;
-    border-radius: 5px;
-    transition: 0.5s;
-    cursor: pointer;
-    opacity: 0;
-}
-
-.product-card:hover .card-btn{
-    opacity: 1;
-}
-
-.card-btn:hover{
-    background: #efefef;
-}
-
-.product-info{
-    width: 100%;
-    height: 100px;
-    padding-top: 10px;
-}
-
-.product-brand{
-    text-transform: uppercase;
-}
-
-.product-short-des{
-    width: 100%;
-    height: 20px;
-    line-height: 20px;
-    overflow: hidden;
-    opacity: 0.5;
-    text-transform: capitalize;
-    margin: 5px 0;
-}
-
-.price{
-    font-weight: 900;
-    font-size: 20px;
-}
-
-.actual-price{
-    margin-left: 20px;
-    opacity: 0.5;
-    text-decoration: line-through;
-} */
