--- a/style.css
+++ b/style.css
@@ -28,17 +28,8 @@ body{
  
 }
 
-p{
-display: block;
-margin-bottom: 2rem;
-text-align: center;
-font-size:2rem ;
-color: #f97316;
 
-}
-
-
-.submit-btn-login{
+.submit-btn{
     display: block;
     margin: auto;
     border-radius: 2px;
@@ -46,7 +37,7 @@ color: #f97316;
     border: none;
     cursor: pointer;
     display: block;
-    width: 200px;
+    width: 300px;
     height: 40px;
     text-align: center;
     line-height: 40px;
