--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-:root{
+/* :root{
     --border-color:#d1d1d1;
     --table-element-color:#fb923c;
     --primary-color: #94a3b8;
-    }
+    } */
 
 /*wishlist-page*/
 
 
-.navbar{
+/* .navbar{ */
     /* position: sticky; */
-    top: 0;
+    /* top: 0;
     left: 0;
-    width: 100%;
+    width: 100%; */
     /* z-index: 9; */
-}
+/* } */
 
-.nav{
+/* .nav{
     padding: 2px 2vw;
     display: flex;
     justify-content: space-between;
@@ -38,7 +38,7 @@
 }
 
 .search{
-    width: 600px;
+    width: 500px;
     display: flex;
 }
 
@@ -76,7 +76,7 @@
     margin-left: 20px;
 }
 
-.nav-items a i{
+.nav-items a img{
     width: 30px;
 }
 
@@ -107,6 +107,109 @@
     justify-content: center;
     align-items: center;
 }
+
+ */
+ *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'roboto', sans-serif;
+}
+
+.navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #f5f5f5;
+    z-index: 9;
+}
+
+.nav{
+    padding: 10px 10vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.brand-logo{
+    height: 60px;
+}
+
+.nav-items{
+    display: flex;
+    align-items: center;
+}
+
+.search{
+    width: 500px;
+    display: flex;
+}
+
+.search-box{
+    width: 80%;
+    height: 40px;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: 1px solid #d1d1d1;
+    text-transform: capitalize;
+    background: none;
+    color: #a9a9a9;
+    outline: none;
+}
+
+.search-btn{
+    width: 20%;
+    height: 40px;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #383838;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 15px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.search-box::placeholder{
+    color: #a9a9a9;
+}
+
+.nav-items a{
+    margin-left: 20px;
+}
+
+.nav-items a img{
+    width: 30px;
+}
+
+.links-container{
+    width: 100%;
+    display: flex;
+    padding: 10px 10vw;
+    justify-content: center;
+    list-style: none;
+    border-top: 1px solid #d1d1d1;
+}
+
+.link{
+    text-transform: capitalize;
+    padding: 0 10px;
+    margin: 0 5px;
+    text-decoration: none;
+    color: #383838;
+    opacity: 0.5;
+    transition: .5s;
+}
+
+/* .link:hover{
+    opacity: 1;
+} */
+
+
+
 .cartpage-title{
 font-size: 20px;
 color: var(--primary-color);
