--- a/sign-up.css
+++ b/sign-up.css
@@ -14,7 +14,7 @@ body{
 }
 
 
-#name,#email,#password,#mob-no{
+.name,.email,.password,.mob-no{
     display: block;  
     margin: 1rem auto;  
     border-radius: 5px;
