--- a/style.css
+++ b/style.css
@@ -204,9 +204,15 @@
     transition: .5s;
 }
 
-/* .link:hover{
-    opacity: 1;
-} */
+.hero-section{
+    width: 100%;
+    height: 34rem;
+    background-image: url('/background-image.png');
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
