Navigation bar updated and icon changes

--- a/wishlist.css
+++ b/wishlist.css
@@ -2,23 +2,34 @@
     --border-color:#d1d1d1;
     --table-element-color:#fb923c;
     --primary-color: #94a3b8;
+    --white:rgb(255, 255, 255);
     }
 
 /*wishlist-page*/
 
 
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        
+    }
+
+
+
 .navbar{
-    /* position: sticky; */
+    
     top: 0;
     left: 0;
     width: 100%;
-    /* z-index: 9; */
+    
 }
 
 .nav{
-    padding: 2px 2vw;
+    
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .nav-items{
@@ -27,16 +38,16 @@
 }
 
 .brand-logo-wishlist{
-    margin-left: 35rem;
+    margin-left: 11rem;
     height:23rem;
     width:23rem;
 }
 
 .nav-items a{
-    margin-left: 20px;
+    margin:1rem;
 }
 
-.nav-items a i{
+.nav-items a img{
     width: 30px;
 }
 
@@ -58,11 +69,11 @@
     transition: .5s;
 }
 
-.cartpage-title{
-font-size: 20px;
-color: var(--primary-color);
+    .cartpage-title{
+    font-size: 20px;
+    color: var(--primary-color);
 
-}
+    }
 
 .wishlist-page{
     margin: 80px 20px;
@@ -84,7 +95,7 @@ table{
 th{
     text-align: left;
     padding: 5px;
-    color:#fff;
+    color:var(--white);
     background: var(--table-element-color);
     font-weight: normal;   
 }
@@ -136,7 +147,7 @@ th:last-child{
 
 
 .cart-btn{
-    color: white;
+    color:var(--white);
     border-radius: 1rem;
     border:none;
     font-size: 12px;
