--- a/style-products.css
+++ b/style-products.css
@@ -105,7 +105,9 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
+.rating{
+    display: block;
+}
 
 .rating1
 {   font-size: 0.9rem;
@@ -117,7 +119,7 @@
     margin-left: 20px;
 }
 
-.nav-items a i{
+.nav-items a img{
     width: 30px;
 }
 
